[gd_scene load_steps=16 format=2]

[ext_resource path="res://character-sheet-2.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://bg1.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 14, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="GDScript" id=7]
script/source = "extends Area2D
"

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5, 12 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 5 )

[sub_resource type="AnimationNodeBlendSpace2D" id=10]

[sub_resource type="AnimationNodeStateMachine" id=11]
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 396, 112 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[node name="Player" type="KinematicBody2D"]
collision_mask = 19
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -13 )
scale = Vector2( 0.966667, 0.947333 )
texture = ExtResource( 1 )
hframes = 16
frame = 12
region_rect = Rect2( 2, 0, 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -12 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Hurt = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/Run = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_v_enabled = true
smoothing_speed = 8.0

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 16
script = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -13 )
shape = SubResource( 8 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 9, -7 )
shape = SubResource( 9 )
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )
parameters/Idle/blend_position = Vector2( 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 180, 180 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
